--- a/src/app/app.css
+++ b/src/app/app.css
@@ -4,7 +4,9 @@ h2
   text-transform: uppercase;
 }
 
-footer {
+
+footer 
+{
   text-align: center;
   padding: 15px;
   background-color: #222;
@@ -14,11 +16,13 @@ footer {
   width: 100%;
 }
 
-body {
-  font-family: 'Fira Code', monospace;;
+body 
+{
+  font-family: 'Fira Code', monospace;  
 }
 
-.typing {
+.typing 
+{
   font-family: 'Fira Code', monospace;
   font-size: 24px;
   overflow: hidden;
@@ -28,12 +32,15 @@ body {
   animation: typing 3s steps(20) forwards, blink 0.7s steps(1) infinite;
 }
 
-@keyframes typing {
+@keyframes typing 
+{
   from { width: 0; }
   to { width: 300px; } /* ajuste para a largura do texto */
 }
 
-@keyframes blink {
+@keyframes blink 
+{
   0%, 50%, 100% { border-color: #c9d1d9; }
   25%, 75% { border-color: transparent; }
 }
+
