BRU#0003 - Links no rodapé

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,9 @@
 <header>
     <h2 class="typing">Olá, eu sou Bruna<span class="cursor"></span></h2>
-    <p>Sou desenvolvedor apaixonado por tecnologia e criei este portfólio em Angular.</p>
+    <p>Sou desenvolvedora apaixonada por tecnologia e criei este portfólio em Angular.</p>
 </header>
 
-<main>
+<main >
   <router-outlet></router-outlet>
 </main>
 
